# mangonel

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: routes.rs
crates/api/src/routes/: auth.rs  common.rs  tfa.rs
crates/api/src/services/: auth.rs  tfa.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: config.rs  interface.rs  lib.rs  payload.rs  runtime.rs  socket.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  components.rs  main.rs  pages.rs  router.rs
crates/gui/src/components/: login.rs  node_link.rs  two_factor.rs
crates/gui/src/pages/: login_page.rs  node_link_page.rs  two_factor_page.rs
crates/libxdp/: Cargo.toml
crates/libxdp-sys/: Cargo.toml  build.rs  wrapper.h
crates/libxdp-sys/src/: lib.rs
crates/libxdp/src/: descriptor.rs  lib.rs  mmap.rs  ring.rs  ring_buffer.rs  socket.rs  umem.rs  util.rs
crates/nic/: Cargo.toml
crates/nic/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  routes.rs  services.rs
crates/server/src/routes/: auth.rs  common.rs  error.rs  tfa.rs
crates/server/src/routes/auth/: login.rs
crates/server/src/routes/tfa/: deregister.rs  register.rs  verify_and_issue_token.rs
crates/server/src/services/: auth.rs  tfa.rs
crates/server/src/services/tfa/: engine.rs  smtp.rs
crates/thread/: Cargo.toml
crates/thread/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: system.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
mangonel/: Cargo.toml
mangonel-libxdp-rs/: Cargo.toml
mangonel-libxdp-rs/src/: descriptor.rs  ring_buffer.rs  socket.rs  umem.rs
mangonel-libxdp-sys/: Cargo.toml  build.rs
mangonel-libxdp-sys.bak/: Cargo.toml
mangonel-libxdp-sys/src/: lib.rs
mangonel/src/: main.rs
scripts/: test
