[workspace]
members = ["crates/libxdp", "crates/libxdp-sys", "crates/thread", "mangonel"]
resolver = "2"

[workspace.package]
authors = ["Donghoon Lee <zombiedelah@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.84"

[workspace.dependencies]
mangonel-libxdp = { path = "crates/libxdp" }
mangonel-libxdp-sys = { path = "crates/libxdp-sys" }
mangonel-thread = { path = "crates/thread" }

getrandom = "0.3.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
