[package]
name = "mangonel-data-plane"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mangonel-thread = { workspace = true }

ctrlc = "3.4.7"
getrandom = { workspace = true }
pnet = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
